<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blackip"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        android:textColor="@color/white"
        android:backgroundTint="#D5222222"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/blackip"
        android:layout_weight="1">
        <Button
            android:layout_margin="2dp"
            android:textSize="25dp"
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:backgroundTint="#591B1A1A"
            />
        <Button
            android:layout_margin="2dp"
            android:textSize="25dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:backgroundTint="@color/number_color"


            />
        <Button
            android:layout_margin="2dp"
            android:textSize="25dp"
            android:id="@+id/btNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:backgroundTint="@color/number_color"

            />
        <Button
            android:layout_margin="2dp"
            android:textSize="25dp"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:backgroundTint="#CB5A16"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFour"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:backgroundTint="@color/number_color"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:backgroundTint="@color/number_color"


            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:backgroundTint="@color/number_color"

            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:textSize="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/x"
            android:backgroundTint="@color/operator_color"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:textSize="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="1"
            android:backgroundTint="@color/number_color"

            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:backgroundTint="@color/number_color"


            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:backgroundTint="@color/number_color"

            />
        <Button
            android:layout_margin="2dp"
            android:textSize="25dp"
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/subtract"
            android:backgroundTint="@color/operator_color"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:backgroundTint="@color/number_color"

            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:textSize="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:backgroundTint="@color/number_color"


            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/add"
            android:backgroundTint="@color/operator_color"
            />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">



        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnCLEAR"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clear"
            android:backgroundTint="#92CF031B"

            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnequal"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:backgroundTint="#BC307B45"
            android:text="@string/equal"
            />






    </LinearLayout>





</LinearLayout>